# sory

./: .flaskenv  .gitignore  README.md  pyproject.toml  setup.py  sory.sublime-project
sory/: __init__.py  boards.py  convert.py  ctrlr.py  mddb.py  model.py  sory.py
sory/static/: style.css
sory/templates/: base.html
sory/templates/sory/: sory.html
tests/: test_sory.py
