[tool.poetry]
name = "sory"
version = "0.1.0"
description = ""
authors = ["Charlie Windolf <cwindolf95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
python-dotenv = "^0.13.0"
gitpython = "^3.1.1"
mypy = "^0.770"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
